--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 </head>
 
 <body>
-    <p>
-        shfsa sjfasdjf jfs fsdjsdfj
-    </p>
-    <div>
-        <p>
-            khfjksa oaosdjfioasdhfasdhfjsdsdjksdhfnsdnjksdnvs jsdjkv a asd asjd asdjb asdj asd jlas dhfjfdsjkfsadjkf
-        </p>
-    </div>
+    <header class="top-section">
+        <div class="card">
+            <div class="text">
+                <div class="title-part">
+                    <h1>The greatest show on the earth</h1>
+                </div>
+                <div class="title-part">
+                    <h3>hhafh hfah fahfas fashfas fhasfhasfh asfhasf hasfhasfh ashfsafh </h3>
+                </div>
+                <div class="title-part"><input type="button" value="watch now"></div>
+            </div>
+            <div class="player-img">
+                <img src="./world-cup-main/assets/Banner Image.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
