--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,12 +16,13 @@
         <div class="card">
             <div class="text">
                 <div class="title-part">
-                    <h1>The greatest show on the earth</h1>
+                    <h1 class="big-title">The greatest show on the earth</h1>
                 </div>
                 <div class="title-part">
-                    <h3>hhafh hfah fahfas fashfas fhasfhasfh asfhasf hasfhasfh ashfsafh </h3>
+                    <h3 class="small-title"> This is the world largest show. World cup this adection happend on qatar.
+                        If you want to see live matchs click the link below </h3>
                 </div>
-                <div class="title-part"><input type="button" value="watch now"></div>
+                <div class="title-part"><input id="button" type="button" value="Watch Live >"></div>
             </div>
             <div class="player-img">
                 <img src="./world-cup-main/assets/Banner Image.png" alt="">
