--- a/index.html
+++ b/index.html
@@ -29,6 +29,30 @@
             </div>
         </div>
     </header>
+    <section class="mid-section">
+        <div class="container">
+            <div class="part-one">
+                <div class="item">Upcoming Match</div>
+                <div class="item">All Group</div>
+                <div class="item">Blogs</div>
+            </div>
+            <div class="part-two">
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt=""></div>
+                    <div class="text">
+                        <div>
+                            <!-- <p>transfer</p>
+                            <p>transfer live Match: Brazil vs Italy</p>
+                            <p>some something</p> -->
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
