--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- fornt link -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
+    <!-- ...kit linkk........... -->
+    <script src="https://kit.fontawesome.com/1234af8e79.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -38,14 +44,14 @@
             </div>
             <div class="part-two">
                 <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt=""></div>
-                    <div class="text">
-                        <div>
-                            <!-- <p>transfer</p>
-                            <p>transfer live Match: Brazil vs Italy</p>
-                            <p>some something</p> -->
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="text">
+                            <p id="first">transfer</p>
+                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
                         </div>
                     </div>
+
 
                 </div>
             </div>
