--- a/index.html
+++ b/index.html
@@ -45,14 +45,57 @@
             <div class="part-two">
                 <div class="small-card">
                     <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="text">
-                            <p id="first">transfer</p>
-                            <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
                             <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
                         </div>
                     </div>
-
-
+                </div>
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
