--- a/index.html
+++ b/index.html
@@ -97,11 +97,57 @@
                         </div>
                     </div>
                 </div>
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                        <div class="textt">
+                            <button class="button">transfer</button>
+                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
 
     </section>
+    <footer class="last-section">
+        <div class="final">
+            <h2>Goal </h2>
+            <hr>
+        </div>
+        <div class="final-text">
+            <div>contacts</div>
+            <div>toijfj jfjs</div>
+            <div>jfsalfjsa jsdj</div>
+            <div>jalkfjfj jf</div>
+            <div>jfaljfajf jkj</div>
+            <div>kjjafkjaj</div>
+        </div>
+        <div class="social-media">
+            <div><i class="fa-brands fa-facebook"></i></div>
+            <div><i class="fa-brands fa-instagram-square"></i></div>
+            <div><i class="fa-brands fa-youtube-square"></i></div>
+        </div>
+    </footer>
 </body>
 
 </html>
