--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             </div>
         </div>
     </header>
+    <!-- -------------
+     midder part
+     --------------.  -->
+
     <section class="mid-section">
         <div class="container">
             <div class="part-one">
