--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
             <hr>
         </div>
         <div class="final-text">
-            <div>contacts</div>
-            <div>toijfj jfjs</div>
-            <div>jfsalfjsa jsdj</div>
-            <div>jalkfjfj jf</div>
-            <div>jfaljfajf jkj</div>
-            <div>kjjafkjaj</div>
+            <div>Contact Us</div>
+            <div>Terms of Service </div>
+            <div> Privacy Policy </div>
+            <div>Privacy Settings </div>
+            <div>Goal App</div>
+            <div>Goal Live</div>
         </div>
         <div class="social-media">
             <div><i class="fa-brands fa-facebook"></i></div>
