--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h3 class="small-title"> This is the world largest show. World cup this adection happend on qatar.
                         If you want to see live matchs click the link below </h3>
                 </div>
-                <div class="title-part"><input id="button" type="button" value="Watch Live >"></div>
+                <div class="title-part"><button id="button">watch live </button></div>
             </div>
             <div class="player-img">
                 <img src="./world-cup-main/assets/Banner Image.png" alt="">
