--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>World Cup Blogs</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- fornt link -->
@@ -28,7 +28,7 @@
                     <h3 class="small-title"> This is the world largest show. World cup this adection happend on qatar.
                         If you want to see live matchs click the link below </h3>
                 </div>
-                <div class="title-part"><button id="button">watch live </button></div>
+                <div class="title-partt"><button id="button">watch live </button></div>
             </div>
             <div class="player-img">
                 <img src="./world-cup-main/assets/Banner Image.png" alt="">
@@ -42,9 +42,9 @@
     <section class="mid-section">
         <div class="container">
             <div class="part-one">
-                <div class="item">Upcoming Match</div>
-                <div class="item">All Group</div>
-                <div class="item">Blogs</div>
+                <div class="item"><a href="">Upcoming Match</a></div>
+                <div class="item"><a href="">All Group</a></div>
+                <div class="item" id="red"><a href=""> Blogs</a></div>
             </div>
             <div class="part-two">
                 <div class="small-card">
