--- a/nextmatch.html
+++ b/nextmatch.html
@@ -48,87 +48,89 @@
             </div>
             <div class="part-two">
                 <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                    <div class="direction">
+                        <div class="flag">
+                            <div class="germany"><img src="./world-cup-main/assets/germany Flag.png" alt=""></div>
+                            <div>
+                                <h2>VS</h2>
+                            </div>
+                            <div class="france"><img src="./world-cup-main/assets/Flag.png" alt=""></div>
                         </div>
-                    </div>
-                </div>
-                <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="small-card">
-                    <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                        <div class="textt">
-                            <button class="button">transfer</button>
-                            <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                            <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                        <div class="flag-title">
+                            <div>
+                                <h2> Germany VS France </h2>
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="small-card">
+                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                    <div class="textt">
+                        <button class="button">transfer</button>
+                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="small-card">
+                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                    <div class="textt">
+                        <button class="button">transfer</button>
+                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="small-card">
+                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                    <div class="textt">
+                        <button class="button">transfer</button>
+                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="small-card">
+                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                    <div class="textt">
+                        <button class="button">transfer</button>
+                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="small-card">
+                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                    <div class="textt">
+                        <button class="button">transfer</button>
+                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="small-card">
+                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                    <div class="textt">
+                        <button class="button">transfer</button>
+                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                    </div>
+                </div>
+            </div>
+            <div class="small-card">
+                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
+                    <div class="textt">
+                        <button class="button">transfer</button>
+                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
         </div>
 
