--- a/nextmatch.html
+++ b/nextmatch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Cup Blogs</title>
+    <title>Upcoming Match </title>
     <link rel="stylesheet" href="style.css">
 
     <!-- fornt link -->
@@ -42,9 +42,9 @@
     <section class="mid-section">
         <div class="container">
             <div class="part-one">
-                <div class="item"><a href="">Upcoming Match</a></div>
+                <div class="item" id="red"><a href="">Upcoming Match</a></div>
                 <div class="item"><a href="">All Group</a></div>
-                <div class="item" id="red"><a href=""> Blogs</a></div>
+                <div class="item"><a href=""> Blogs</a></div>
             </div>
             <div class="part-two">
                 <div class="small-card">
@@ -65,73 +65,100 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="small-card">
+                    <div class="direction">
+                        <div class="flag">
+                            <div class="germany"><img src="./world-cup-main/assets/germany Flag.png" alt=""></div>
+                            <div>
+                                <h2>VS</h2>
+                            </div>
+                            <div class="france"><img src="./world-cup-main/assets/Flag.png" alt=""></div>
+                        </div>
+                        <div class="flag-title">
+                            <div>
+                                <h2> Germany VS France </h2>
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="direction">
+                        <div class="flag">
+                            <div class="germany"><img src="./world-cup-main/assets/germany Flag.png" alt=""></div>
+                            <div>
+                                <h2>VS</h2>
+                            </div>
+                            <div class="france"><img src="./world-cup-main/assets/Flag.png" alt=""></div>
+                        </div>
+                        <div class="flag-title">
+                            <div>
+                                <h2> Germany VS France </h2>
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="direction">
+                        <div class="flag">
+                            <div class="germany"><img src="./world-cup-main/assets/germany Flag.png" alt=""></div>
+                            <div>
+                                <h2>VS</h2>
+                            </div>
+                            <div class="france"><img src="./world-cup-main/assets/Flag.png" alt=""></div>
+                        </div>
+                        <div class="flag-title">
+                            <div>
+                                <h2> Germany VS France </h2>
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="direction">
+                        <div class="flag">
+                            <div class="germany"><img src="./world-cup-main/assets/germany Flag.png" alt=""></div>
+                            <div>
+                                <h2>VS</h2>
+                            </div>
+                            <div class="france"><img src="./world-cup-main/assets/Flag.png" alt=""></div>
+                        </div>
+                        <div class="flag-title">
+                            <div>
+                                <h2> Germany VS France </h2>
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <div class="direction">
+                        <div class="flag">
+                            <div class="germany"><img src="./world-cup-main/assets/germany Flag.png" alt=""></div>
+                            <div>
+                                <h2>VS</h2>
+                            </div>
+                            <div class="france"><img src="./world-cup-main/assets/Flag.png" alt=""></div>
+                        </div>
+                        <div class="flag-title">
+                            <div>
+                                <h2> Germany VS France </h2>
+                                <p>April 01, 2023, 1.00 AM</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="small-card">
-                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                    <div class="textt">
-                        <button class="button">transfer</button>
-                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="small-card">
-                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                    <div class="textt">
-                        <button class="button">transfer</button>
-                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="small-card">
-                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                    <div class="textt">
-                        <button class="button">transfer</button>
-                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="small-card">
-                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                    <div class="textt">
-                        <button class="button">transfer</button>
-                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="small-card">
-                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                    <div class="textt">
-                        <button class="button">transfer</button>
-                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="small-card">
-                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                    <div class="textt">
-                        <button class="button">transfer</button>
-                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                    </div>
-                </div>
-            </div>
-            <div class="small-card">
-                <div class="pic"><img src="./world-cup-main/assets/Blog Image.png" alt="">
-                    <div class="textt">
-                        <button class="button">transfer</button>
-                        <p id="diff">Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
-                        <p><i class="fa-solid fa-clock"></i>10 hours <i class="fa-solid fa-message"></i>23</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
+
         </div>
 
     </section>
