--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <h3 class="small-title"> This is the world largest show. World cup this adection happend on qatar.
                         If you want to see live matchs click the link below </h3>
                 </div>
-                <div class="title-partt"><button id="button">watch live </button></div>
+                <div class="title-partt"><button id="button">watch live <i class="fa-regular fa-life-ring"></i>
+                    </button></div>
             </div>
             <div class="player-img">
                 <img src="./world-cup-main/assets/Banner Image.png" alt="">
@@ -42,9 +43,9 @@
     <section class="mid-section">
         <div class="container">
             <div class="part-one">
-                <div class="item"><a href="">Upcoming Match</a></div>
-                <div class="item"><a href="">All Group</a></div>
-                <div class="item" id="red"><a href=""> Blogs</a></div>
+                <div class="item"><a href="./nextmatch.html">Upcoming Match</a></div>
+                <div class="item"><a href="./Allgroup.html">All Group</a></div>
+                <div class="item" id="red"><a href="./index.html"> Blogs</a></div>
             </div>
             <div class="part-two">
                 <div class="small-card">
